Refactor the settings system to read/write PDC tags instead of byte[]